<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/showdaylist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/titelsize"
                android:gravity="center"
                android:layout_margin="@dimen/titelmargin"
                android:textColor="#D5D0D0"
                android:text="@string/textday"
                android:background="@drawable/titel_style"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <ListView
                    android:id="@+id/list_days"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />
            </LinearLayout>

            <TextView
                android:id="@+id/showeeklist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/titelmargin"
                android:background="@drawable/titel_style"
                android:gravity="center"
                android:text="@string/textweek"
                android:textColor="#D5D0D0"
                android:textSize="@dimen/titelsize" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
            <ListView
                android:id="@+id/list_weekly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />
            </LinearLayout>

            <TextView
                android:id="@+id/showmonthlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/titelmargin"
                android:background="@drawable/titel_style"
                android:gravity="center"
                android:text="@string/textmonth"
                android:textColor="#D5D0D0"
                android:textSize="@dimen/titelsize" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <ListView
                    android:id="@+id/list_montly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    />
            </LinearLayout>
        </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fabmargin"
        android:src="@drawable/ic_add"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>